Made it so that the DrinkFilter uses streams